Added get all links and update link endpoints
