# apps/backend/src/api/link/index.ts
@@ -1,8 +1,8 @@
 import { Router } from "express";
 import { authJwtHandler } from "../auth";
 import createHttpError from "http-errors";
-import { validateLinkCreateHandler } from "./middleware";
-import { LinkCreateSchemaType } from "./validation";
+import { validateLinkCreateHandler, validateLinkUpdateHandler } from "./middleware";
+import { LinkCreateSchemaType, LinkUpdateSchemaType } from "./validation";
 import { ClickStatModel, IShortUrl, IUser, ShortUrlModel } from "../../model";
 import { nanoid } from "nanoid";
 import validateLinkOwnerHandler from "./middleware/validate-link-owner.handler";
@@ -11,43 +11,99 @@ import { logger } from "../../service";
 export const linkRoute = (): Router => {
     const router = Router();
 
-    router.post<{}, IShortUrl, LinkCreateSchemaType>("/shorten", authJwtHandler(), validateLinkCreateHandler(), async (req, res, next) => {
-        try {
-            const user = req.user as IUser;
-            const shortUrl = await ShortUrlModel.create({
-                userId: user._id,
-                originalUrl: req.body.originalUrl,
-                shortId: nanoid(7),
-            });
+    router.get<never, IShortUrl[]>("/",
+        authJwtHandler(),
+        async (req, res, next) => {
+            try {
+                const user = req.user as IUser;
+                const shortUrl = await ShortUrlModel.find({ userId: user.id });
 
-            res.status(201).json(shortUrl);
-        } catch (err) {
-            if ((err as any)?.code === 11000) next(createHttpError.BadRequest("A shortened link already exists for this user with the same original URL."));
-            else next(err);
-        }
-    });
+                if (!shortUrl.length) return next(createHttpError.NotFound());
 
-    router.get<{ shortId: string }, IShortUrl>("/:shortId", authJwtHandler(), async (req, res, next) => {
-        try {
-            const user = req.user as IUser;
-            const shortUrl = await ShortUrlModel.findOne({ _id: req.params.shortId, userId: user.id });
+                res.json(shortUrl);
+            } catch (err) {
+                next(err);
+            }
+        },
+    );
 
-            if (!shortUrl) return next(createHttpError.NotFound());
+    router.post<{}, IShortUrl, LinkCreateSchemaType>("/shorten",
+        authJwtHandler(),
+        validateLinkCreateHandler(),
+        async (req, res, next) => {
+            try {
+                const user = req.user as IUser;
+                const shortUrl = await ShortUrlModel.create({
+                    userId: user._id,
+                    displayName: req.body.displayName,
+                    originalUrl: req.body.originalUrl,
+                    shortId: nanoid(7),
+                });
 
-            res.json(shortUrl);
-        } catch (err) {
-            next(err);
-        }
-    });
+                res.status(201).json(shortUrl);
+            } catch (err) {
+                if ((err as any)?.code === 11000) next(createHttpError.BadRequest("A shortened link already exists for this user with the same original URL."));
+                else next(err);
+            }
+        },
+    );
 
-    router.delete("/:shortId", authJwtHandler(), validateLinkOwnerHandler(), async (req, res, next) => {
-        try {
-            await ShortUrlModel.findByIdAndDelete(req.params.shortId);
-            res.sendStatus(200);
-        } catch (err) {
-            next(err);
-        }
-    });
+    router.patch<{
+        shortId: string
+    }, IShortUrl, LinkUpdateSchemaType>("/:shortId",
+        authJwtHandler(),
+        validateLinkOwnerHandler(),
+        validateLinkUpdateHandler(),
+        async (req, res, next) => {
+            try {
+                const shortUrl = await ShortUrlModel.findOneAndUpdate(
+                    { _id: req.params.shortId }, {
+                        displayName: req.body.displayName,
+                        originalUrl: req.body.originalUrl,
+                    }, { new: true });
+
+                // ShortUrl should be here, but leave a check here
+                if (!shortUrl) {
+                    logger.error("ShortUrl is undefined");
+
+                    return next(createHttpError.InternalServerError());
+                }
+
+                res.json(shortUrl);
+            } catch (err) {
+                next(err);
+            }
+        },
+    );
+
+    router.get<{ shortId: string }, IShortUrl>("/:shortId",
+        authJwtHandler(),
+        async (req, res, next) => {
+            try {
+                const user = req.user as IUser;
+                const shortUrl = await ShortUrlModel.findOne({ _id: req.params.shortId, userId: user.id });
+
+                if (!shortUrl) return next(createHttpError.NotFound());
+
+                res.json(shortUrl);
+            } catch (err) {
+                next(err);
+            }
+        },
+    );
+
+    router.delete("/:shortId",
+        authJwtHandler(),
+        validateLinkOwnerHandler(),
+        async (req, res, next) => {
+            try {
+                await ShortUrlModel.findByIdAndDelete(req.params.shortId);
+                res.sendStatus(200);
+            } catch (err) {
+                next(err);
+            }
+        },
+    );
 
     return router;
 };
@@ -58,6 +114,7 @@ export const linkRedirectRoute = () => {
     router.get("/:shortId", async (req, res, next) => {
         try {
             const shortUrl = await ShortUrlModel.findOne({ shortId: req.params.shortId });
+
             if (!shortUrl) return next(createHttpError.NotFound());
 
             ClickStatModel.create({
@@ -70,7 +127,6 @@ export const linkRedirectRoute = () => {
                 .then((clickStat) => logger.info("Click stat logged", clickStat.toJSON()))
                 .catch(err => logger.error(err));
 
-            // res.redirect(shortUrl.originalUrl);
 
             res.send(`
                 <!DOCTYPE html>
