# apps/backend/src/api/link/validation/index.ts
@@ -1,6 +1,9 @@
 import LinkCreateSchema, { LinkCreateSchemaType } from "./link-create.schema";
+import LinkUpdateSchema, { LinkUpdateSchemaType } from "./link-update.schema";
 
 export {
     LinkCreateSchema,
     LinkCreateSchemaType,
+    LinkUpdateSchema,
+    LinkUpdateSchemaType,
 };
